--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -106,8 +106,25 @@ li a:hover {
     
 }
 .flex-container>form :hover{
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.267);
 }
+.newreq {
+    display: flex;
+    width: 100%;
+    margin-left: 40px;
+    left: 40px;
+    
+}
+
+#category, #title, #freq, #new, #description {
+    width: 100%;
+}
+/* #freq {
+    width: 100%;
+}
+#new {
+    width: 100%;
+} */
 /*flex-box*/
 .banner{
     max-height: 7%;
