--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -12,6 +12,7 @@ body{
     background-color: rgba(44, 14, 14, 0.74);
     position: -webkit-sticky; /* Safari */
     position: sticky;
+    
       
 }
 .nav-bar>ul {
@@ -133,6 +134,49 @@ li a:hover {
 #Create{
         margin-right: 10%;
 }
+#sentitems{
+    display: table;
+    margin-left: 40px;
+    left: 40px;
+    height: 90%;
+
+}
+.flex-container>form{
+    background-color: rgba(192, 183, 183, 0.562);
+    display: table;
+    width: 90%;
+    align-items: center;
+    margin-top: 10px;
+ }
+table{
+    border-collapse: collapse;
+    background-color: white;
+    width: 90%;
+    margin-left: 40px;
+    display: table;
+    overflow-y: scroll;
+    
+}
+table, th, td {
+    border-bottom: 1px solid #ddd;
+}
+th, td{
+    padding: 15px;
+    text-align: left;
+}
+tr:hover {
+    background-color: #f5f5f5;
+}
+tr:nth-child(odd) {
+    background-color: #f2f2f2;
+}
+th{
+    background-color: rgba(22, 223, 223, 0.849)
+}
+
+th{
+    height: 50px;
+}
 /* #freq {
     width: 100%;
 }
@@ -202,6 +246,7 @@ input[type=submit]{
 }
 .sidenav a:hover {
     color: rgb(9, 245, 245);
+    background-color: white;
 }
 .sidenav a:active {
     color: rgb(9, 245, 245);
