--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -148,15 +148,16 @@ li a:hover {
     align-items: center;
     margin-top: 10px;
  }
+ 
 table{
     border-collapse: collapse;
     background-color: white;
     width: 90%;
     margin-left: 40px;
     display: table;
-    overflow-y: scroll;
-    
+       
 }
+
 table, th, td {
     border-bottom: 1px solid #ddd;
 }
@@ -165,7 +166,7 @@ th, td{
     text-align: left;
 }
 tr:hover {
-    background-color: #f5f5f5;
+    background-color: #548d8f;
 }
 tr:nth-child(odd) {
     background-color: #f2f2f2;
@@ -271,7 +272,12 @@ input[type=submit]{
     }
     input[type=text]{
         width: 40%;
-    }    
+    }
+    div.flex-container.sentreq{
+        overflow-y: auto;
+        overflow-x: auto;
+        width: 800px;
+     }    
 }
 
 @media screen and (max-width:600px){
